tests/test116.rael.exp
Error [tests/test116.rael:1:14]: Index too big
| log 12 to 12 at 1
|              ^
